# shodh

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/grawl/: __init__.py  __main__.py  cli.py  crawler.py  exceptions.py  types.py
src/shodh/: __init__.py  __main__.py  cli.py  crawler.py  exceptions.py  types.py
tests/: conftest.py  test_cli.py  test_crawler.py
