[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shodh"
version = "0.1.1"
description = "A fast broken link scanner for websites"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Aman Mulani" }]
keywords = ["crawler", "404", "broken-links", "seo", "website-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
]
dependencies = [
    "requests>=2.28.0",
    "selectolax>=0.3.0",
    "click>=8.0.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
shodh = "grawl.cli:main"

[project.urls]
Homepage = "https://github.com/amanmulani/shodh"
Repository = "https://github.com/amanmulani/shodh"
Issues = "https://github.com/amanmulani/shodh/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/grawl"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["grawl"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["selectolax.*", "colorama.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
